--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,13 @@ strong {
     color: #555;
 }
 
+.project-image {
+    max-width: 400px;
+    height: auto;
+    display: block;
+    margin: 15px 0;
+}
+
 /* Accessibility enhancements */
 :focus {
     outline: 2px solid #000000;
@@ -116,5 +123,9 @@ strong {
         height: 120px;
         margin-right: 0;
         margin-bottom: 10px;
+    }
+
+    .project-image {
+        max-width: 100%;
     }
 }
